add better logging structure

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -58,9 +58,9 @@
                 </a>
             </li>
             <li>
-                <a th:href="@{/error-log}" href="#">
+                <a th:href="@{/log}" href="#">
                     <i class="glyphicon glyphicon-link"></i>
-                    <span>Error log</span>
+                    <span>Log</span>
                 </a>
             </li>
             <li class="active">
@@ -133,7 +133,7 @@
         <h2 id="known-issues">Known issues</h2>
         <ul>
             <li>parsing single product does not persist the product with all dependencies</li>
-            <li>parsing fails for a couple of products - see error log</li>
+            <li>parsing fails for a couple of products - see Log</li>
             <li>no pagination</li>
             <li>cannot limit number of threads to use for the parsing</li>
             <li>problems with Czech encoding</li>
