--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,9 +67,9 @@
             </li>
 
             <li>
-                <a th:href="@{/error-log}" href="#">
+                <a th:href="@{/log}" href="#">
                     <i class="glyphicon glyphicon-link"></i>
-                    <span>Error log</span>
+                    <span>Log</span>
                 </a>
             </li>
             <li>
