--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -54,7 +54,7 @@
             <li>
                 <a th:href="@{/error-log}" href="#">
                     <i class="glyphicon glyphicon-link"></i>
-                    <span>Error log</span>
+                    <span>Log</span>
                 </a>
             </li>
         </ul>
