--- a/src/main/resources/templates/scraping.html
+++ b/src/main/resources/templates/scraping.html
@@ -58,9 +58,9 @@
                 </a>
             </li>
             <li>
-                <a th:href="@{/error-log}" href="#">
+                <a th:href="@{/log}" href="#">
                     <i class="glyphicon glyphicon-link"></i>
-                    <span>Error log</span>
+                    <span>Log</span>
                 </a>
             </li>
             <li>
