--- a/src/main/resources/templates/scraping.html
+++ b/src/main/resources/templates/scraping.html
@@ -140,12 +140,12 @@
 
 
         <!-- Modal -->
-        <div class="modal fade" id="logs-dialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" id="logs-dialog" tabindex="-1" role="dialog" aria-labelledby="modalDialogLabel"
              aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Parsing status</h5>
+                        <h5 class="modal-title" id="modalDialogLabel">Parsing ...</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
